Oberon0/Oberon0/antlr-generated/com/kootsjur/oberon/OberonParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g 2011-01-30 22:50:22

  package com.kootsjur.oberon.parser;
  import java.util.List
  import java.util.ArrayList;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class OberonParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "DIGIT", "LETTER", "WS", "'MODULE'", "';'", "'BEGIN'", "'END'", "'.'", "'CONST'", "'='", "'TYPE'", "'VAR'", "':'", "','", "'PROCEDURE'", "'('", "')'", "'RECORD'", "'ARRAY'", "'OF'", "':='", "'WHILE'", "'DO'", "'IF'", "'THEN'", "'ELSEIF'", "'ELSE'", "'#'", "'<'", "'<='", "'>'", "'>='", "'+'", "'-'", "'OR'", "'*'", "'DIV'", "'MOD'", "'&'", "'['", "']'"
    };
    public static final int EOF=-1;
    public static final int T__7=7;
    public static final int T__8=8;
    public static final int T__9=9;
    public static final int T__10=10;
    public static final int T__11=11;
    public static final int T__12=12;
    public static final int T__13=13;
    public static final int T__14=14;
    public static final int T__15=15;
    public static final int T__16=16;
    public static final int T__17=17;
    public static final int T__18=18;
    public static final int T__19=19;
    public static final int T__20=20;
    public static final int T__21=21;
    public static final int T__22=22;
    public static final int T__23=23;
    public static final int T__24=24;
    public static final int T__25=25;
    public static final int T__26=26;
    public static final int T__27=27;
    public static final int T__28=28;
    public static final int T__29=29;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__44=44;
    public static final int DIGIT=4;
    public static final int LETTER=5;
    public static final int WS=6;

    // delegates
    // delegators


        public OberonParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public OberonParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return OberonParser.tokenNames; }
    public String getGrammarFileName() { return "D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g"; }


    	private Module module;



    // $ANTLR start "module"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:21:1: module : 'MODULE' ident1= ident ';' declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident '.' ;
    public final void module() throws RecognitionException {
        OberonParser.ident_return ident1 = null;

        List<Declaration> declarations1 = null;

        Procedure procedure2 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:21:8: ( 'MODULE' ident1= ident ';' declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident '.' )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:21:10: 'MODULE' ident1= ident ';' declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident '.'
            {
            match(input,7,FOLLOW_7_in_module45); 
            pushFollow(FOLLOW_ident_in_module49);
            ident1=ident();

            state._fsp--;

            match(input,8,FOLLOW_8_in_module50); 
            module = new Module((ident1!=null?input.toString(ident1.start,ident1.stop):null));
            pushFollow(FOLLOW_declarations_in_module59);
            declarations1=declarations();

            state._fsp--;

            module.setDeclarations(declarations1);
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:23:5: ( procedure ';' )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==18) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:23:6: procedure ';'
            	    {
            	    pushFollow(FOLLOW_procedure_in_module69);
            	    procedure2=procedure();

            	    state._fsp--;

            	    match(input,8,FOLLOW_8_in_module70); 
            	    module.addProcedure(procedure2);

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);

            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:24:5: ( 'BEGIN' statementSequence )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==9) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:24:6: 'BEGIN' statementSequence
                    {
                    match(input,9,FOLLOW_9_in_module81); 
                    pushFollow(FOLLOW_statementSequence_in_module83);
                    statementSequence();

                    state._fsp--;

                    module.setStatementSequence(new StatementSequence());

                    }
                    break;

            }

            match(input,10,FOLLOW_10_in_module89); 
            pushFollow(FOLLOW_ident_in_module91);
            ident();

            state._fsp--;

            match(input,11,FOLLOW_11_in_module93); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "module"


    // $ANTLR start "declarations"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:26:1: declarations returns [List<Declaration> ld] : ( constantDeclaration )* ( typeDeclaration )* ( varDeclaration )* ;
    public final List<Declaration> declarations() throws RecognitionException {
        List<Declaration> ld = null;

        List<ConstantDeclaration> constantDeclaration3 = null;

        List<TypeDeclaration> typeDeclaration4 = null;

        List<VarDeclaration> varDeclaration5 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:27:2: ( ( constantDeclaration )* ( typeDeclaration )* ( varDeclaration )* )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:27:4: ( constantDeclaration )* ( typeDeclaration )* ( varDeclaration )*
            {
            ld = new ArrayList<Declaration>();
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:28:3: ( constantDeclaration )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==12) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:28:4: constantDeclaration
            	    {
            	    pushFollow(FOLLOW_constantDeclaration_in_declarations112);
            	    constantDeclaration3=constantDeclaration();

            	    state._fsp--;

            	    ld.add(constantDeclaration3);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:29:3: ( typeDeclaration )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==14) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:29:4: typeDeclaration
            	    {
            	    pushFollow(FOLLOW_typeDeclaration_in_declarations121);
            	    typeDeclaration4=typeDeclaration();

            	    state._fsp--;

            	    ld.add(typeDeclaration4);

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:30:3: ( varDeclaration )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==15) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:30:4: varDeclaration
            	    {
            	    pushFollow(FOLLOW_varDeclaration_in_declarations131);
            	    varDeclaration5=varDeclaration();

            	    state._fsp--;

            	    ld.add(varDeclaration5);

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ld;
    }
    // $ANTLR end "declarations"


    // $ANTLR start "constantDeclaration"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:33:1: constantDeclaration returns [List<ConstantDeclaration> lcd] : 'CONST' ( ident '=' expression ';' )+ ;
    public final List<ConstantDeclaration> constantDeclaration() throws RecognitionException {
        List<ConstantDeclaration> lcd = null;

        OberonParser.ident_return ident6 = null;

        Expression expression7 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:34:2: ( 'CONST' ( ident '=' expression ';' )+ )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:34:3: 'CONST' ( ident '=' expression ';' )+
            {
            match(input,12,FOLLOW_12_in_constantDeclaration154); 
            lcd = new ArrayList<ConstantDeclaration>();
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:34:58: ( ident '=' expression ';' )+
            int cnt6=0;
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==LETTER) ) {
                    alt6=1;
                }


                switch (alt6) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:34:59: ident '=' expression ';'
            	    {
            	    pushFollow(FOLLOW_ident_in_constantDeclaration159);
            	    ident6=ident();

            	    state._fsp--;

            	    match(input,13,FOLLOW_13_in_constantDeclaration161); 
            	    pushFollow(FOLLOW_expression_in_constantDeclaration163);
            	    expression7=expression();

            	    state._fsp--;

            	    match(input,8,FOLLOW_8_in_constantDeclaration165); 
            	    lcd.add(new ConstantDeclaration((ident6!=null?input.toString(ident6.start,ident6.stop):null), expression7));

            	    }
            	    break;

            	default :
            	    if ( cnt6 >= 1 ) break loop6;
                        EarlyExitException eee =
                            new EarlyExitException(6, input);
                        throw eee;
                }
                cnt6++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return lcd;
    }
    // $ANTLR end "constantDeclaration"


    // $ANTLR start "typeDeclaration"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:36:1: typeDeclaration returns [List<TypeDeclaration> ltd] : 'TYPE' ( ident '=' type ';' )+ ;
    public final List<TypeDeclaration> typeDeclaration() throws RecognitionException {
        List<TypeDeclaration> ltd = null;

        OberonParser.ident_return ident8 = null;

        TypeDefinition type9 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:37:2: ( 'TYPE' ( ident '=' type ';' )+ )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:37:4: 'TYPE' ( ident '=' type ';' )+
            {
            match(input,14,FOLLOW_14_in_typeDeclaration185); 
            ltd = new ArrayList<TypeDeclaration>();
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:37:54: ( ident '=' type ';' )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==LETTER) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:37:55: ident '=' type ';'
            	    {
            	    pushFollow(FOLLOW_ident_in_typeDeclaration190);
            	    ident8=ident();

            	    state._fsp--;

            	    match(input,13,FOLLOW_13_in_typeDeclaration192); 
            	    pushFollow(FOLLOW_type_in_typeDeclaration194);
            	    type9=type();

            	    state._fsp--;

            	    match(input,8,FOLLOW_8_in_typeDeclaration196); 
            	    ltd.add(new TypeDeclaration((ident8!=null?input.toString(ident8.start,ident8.stop):null), type9));

            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ltd;
    }
    // $ANTLR end "typeDeclaration"


    // $ANTLR start "varDeclaration"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:39:1: varDeclaration returns [List<VarDeclaration> lvd] : 'VAR' ( identList ':' type ';' )+ ;
    public final List<VarDeclaration> varDeclaration() throws RecognitionException {
        List<VarDeclaration> lvd = null;

        List<String> identList10 = null;

        TypeDefinition type11 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:40:2: ( 'VAR' ( identList ':' type ';' )+ )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:40:4: 'VAR' ( identList ':' type ';' )+
            {
            match(input,15,FOLLOW_15_in_varDeclaration214); 
            lvd = new ArrayList<VarDeclaration>();
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:40:52: ( identList ':' type ';' )+
            int cnt8=0;
            loop8:
            do {
                int alt8=2;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==LETTER) ) {
                    alt8=1;
                }


                switch (alt8) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:40:53: identList ':' type ';'
            	    {
            	    pushFollow(FOLLOW_identList_in_varDeclaration219);
            	    identList10=identList();

            	    state._fsp--;

            	    match(input,16,FOLLOW_16_in_varDeclaration221); 
            	    pushFollow(FOLLOW_type_in_varDeclaration223);
            	    type11=type();

            	    state._fsp--;

            	    match(input,8,FOLLOW_8_in_varDeclaration225); 
            	    lvd.add(new VarDeclaration(identList10, type11)

            	    }
            	    break;

            	default :
            	    if ( cnt8 >= 1 ) break loop8;
                        EarlyExitException eee =
                            new EarlyExitException(8, input);
                        throw eee;
                }
                cnt8++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return lvd;
    }
    // $ANTLR end "varDeclaration"


    // $ANTLR start "identList"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:42:1: identList returns [List<String> l] : ident1= ident ( ',' ident2= ident )* ;
    public final List<String> identList() throws RecognitionException {
        List<String> l = null;

        OberonParser.ident_return ident1 = null;

        OberonParser.ident_return ident2 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:43:2: (ident1= ident ( ',' ident2= ident )* )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:43:5: ident1= ident ( ',' ident2= ident )*
            {
            l = new ArrayList<String>();
            pushFollow(FOLLOW_ident_in_identList250);
            ident1=ident();

            state._fsp--;

            l.add((ident1!=null?input.toString(ident1.start,ident1.stop):null));
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:43:73: ( ',' ident2= ident )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==17) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:43:74: ',' ident2= ident
            	    {
            	    match(input,17,FOLLOW_17_in_identList254); 
            	    pushFollow(FOLLOW_ident_in_identList257);
            	    ident2=ident();

            	    state._fsp--;

            	    l.add((ident2!=null?input.toString(ident2.start,ident2.stop):null));

            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return l;
    }
    // $ANTLR end "identList"


    // $ANTLR start "procedure"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:45:1: procedure returns [Procedure p] : procedureHeading ';' procedureBody ;
    public final Procedure procedure() throws RecognitionException {
        Procedure p = null;

        ProcedureHeading procedureHeading12 = null;

        ProcedureBody procedureBody13 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:46:2: ( procedureHeading ';' procedureBody )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:46:4: procedureHeading ';' procedureBody
            {
            pushFollow(FOLLOW_procedureHeading_in_procedure281);
            procedureHeading12=procedureHeading();

            state._fsp--;

            match(input,8,FOLLOW_8_in_procedure283); 
            pushFollow(FOLLOW_procedureBody_in_procedure285);
            procedureBody13=procedureBody();

            state._fsp--;

            p = new Procedure(procedureHeading12, procedureBody13));

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return p;
    }
    // $ANTLR end "procedure"


    // $ANTLR start "procedureBody"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:48:1: procedureBody returns [ProcedureBody pb] : declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident ;
    public final ProcedureBody procedureBody() throws RecognitionException {
        ProcedureBody pb = null;

        List<Declaration> declarations14 = null;

        Procedure procedure15 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:49:2: ( declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:49:4: declarations ( procedure ';' )* ( 'BEGIN' statementSequence )? 'END' ident
            {
            pb = new ProcedureBody();
            pushFollow(FOLLOW_declarations_in_procedureBody308);
            declarations14=declarations();

            state._fsp--;

            pb.setDeclarations(declarations14);
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:51:5: ( procedure ';' )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==18) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:51:6: procedure ';'
            	    {
            	    pushFollow(FOLLOW_procedure_in_procedureBody318);
            	    procedure15=procedure();

            	    state._fsp--;

            	    match(input,8,FOLLOW_8_in_procedureBody319); 
            	    pb.addProcedure(procedure15);

            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);

            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:52:5: ( 'BEGIN' statementSequence )?
            int alt11=2;
            int LA11_0 = input.LA(1);

            if ( (LA11_0==9) ) {
                alt11=1;
            }
            switch (alt11) {
                case 1 :
                    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:52:6: 'BEGIN' statementSequence
                    {
                    match(input,9,FOLLOW_9_in_procedureBody330); 
                    pushFollow(FOLLOW_statementSequence_in_procedureBody332);
                    statementSequence();

                    state._fsp--;

                    pb.setStatementSequence(new StatementSequence());

                    }
                    break;

            }

            match(input,10,FOLLOW_10_in_procedureBody338); 
            pushFollow(FOLLOW_ident_in_procedureBody340);
            ident();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return pb;
    }
    // $ANTLR end "procedureBody"


    // $ANTLR start "procedureHeading"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:54:1: procedureHeading returns [ProcedureHeading ph] : 'PROCEDURE' ident ( formalParameters ) ;
    public final ProcedureHeading procedureHeading() throws RecognitionException {
        ProcedureHeading ph = null;

        OberonParser.ident_return ident16 = null;


        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:55:2: ( 'PROCEDURE' ident ( formalParameters ) )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:55:4: 'PROCEDURE' ident ( formalParameters )
            {
            match(input,18,FOLLOW_18_in_procedureHeading354); 
            pushFollow(FOLLOW_ident_in_procedureHeading355);
            ident16=ident();

            state._fsp--;

            ph = new ProcedureHeading((ident16!=null?input.toString(ident16.start,ident16.stop):null));
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:55:63: ( formalParameters )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:55:64: formalParameters
            {
            pushFollow(FOLLOW_formalParameters_in_procedureHeading359);
            formalParameters();

            state._fsp--;


            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ph;
    }
    // $ANTLR end "procedureHeading"


    // $ANTLR start "formalParameters"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:57:1: formalParameters : '(' ( fPSection ( ';' fPSection )* )? ')' ;
    public final void formalParameters() throws RecognitionException {
        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:2: ( '(' ( fPSection ( ';' fPSection )* )? ')' )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:4: '(' ( fPSection ( ';' fPSection )* )? ')'
            {
            match(input,19,FOLLOW_19_in_formalParameters370); 
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:7: ( fPSection ( ';' fPSection )* )?
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==LETTER||LA13_0==15) ) {
                alt13=1;
            }
            switch (alt13) {
                case 1 :
                    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:8: fPSection ( ';' fPSection )*
                    {
                    pushFollow(FOLLOW_fPSection_in_formalParameters372);
                    fPSection();

                    state._fsp--;

                    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:18: ( ';' fPSection )*
                    loop12:
                    do {
                        int alt12=2;
                        int LA12_0 = input.LA(1);

                        if ( (LA12_0==8) ) {
                            alt12=1;
                        }


                        switch (alt12) {
                    	case 1 :
                    	    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:58:19: ';' fPSection
                    	    {
                    	    match(input,8,FOLLOW_8_in_formalParameters375); 
                    	    pushFollow(FOLLOW_fPSection_in_formalParameters376);
                    	    fPSection();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop12;
                        }
                    } while (true);


                    }
                    break;

            }

            match(input,20,FOLLOW_20_in_formalParameters381); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "formalParameters"


    // $ANTLR start "fPSection"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:60:1: fPSection : ( 'VAR' )? identList ':' type ;
    public final void fPSection() throws RecognitionException {
        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:61:2: ( ( 'VAR' )? identList ':' type )
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:61:4: ( 'VAR' )? identList ':' type
            {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:61:4: ( 'VAR' )?
            int alt14=2;
            int LA14_0 = input.LA(1);

            if ( (LA14_0==15) ) {
                alt14=1;
            }
            switch (alt14) {
                case 1 :
                    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:61:5: 'VAR'
                    {
                    match(input,15,FOLLOW_15_in_fPSection395); 

                    }
                    break;

            }

            pushFollow(FOLLOW_identList_in_fPSection399);
            identList();

            state._fsp--;

            match(input,16,FOLLOW_16_in_fPSection400); 
            pushFollow(FOLLOW_type_in_fPSection401);
            type();

            state._fsp--;


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "fPSection"


    // $ANTLR start "type"
    // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:63:1: type returns [TypeDefinition t] : ( ident | arrayType | recordType );
    public final TypeDefinition type() throws RecognitionException {
        TypeDefinition t = null;

        try {
            // D:\\users\\kootsjur\\workspace\\Oberon0\\src\\com\\kootsjur\\oberon\\Oberon.g:63:33: ( ident | arrayType | recordType )
            int alt15=3;
            switch ( input.LA(1) ) {
            case LETTER:
                {
                alt15=1;
                }
                break;
            case 22:
                {
